# LangChain-sample

./: README.md  alembic.ini  bedrock_chat_sample.py  boto3_sample.py  create_sql_agent_sample.py  create_sql_agent_sample2.py  default.env  docker-compose.yml  google_search.py  google_search_bedrock.py  google_search_bedrock_not_work.py  lang_chain_sql.py  llm_db.py  migration.sql  models.py  os_env.py  pyproject.toml  requirements.txt  sqlalchemy_sample.py  wikipedia_bedrock.py
alembic/: env.py
alembic/versions/: dfebef2f0749_create_product_table.py
app/: create_sql_agent_sample.py  create_sql_agent_sample2.py  db.py  models.py  models_generate.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 2fdcb9e65591_create_helo_table.py  8ebe2a013618_create_helo_table.py  b031d4fe1c3e_create_products_hero_table.py  bbd523b8a740_add_price_on_products_table.py  ce89be70fc8d_create_helo_table.py
app/seeds/: products.py
