[tool.poetry]
name = "langchain-samples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
alembic = "1.13.1"
annotated-types = "0.6.0"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
boto3 = "1.34.89"
botocore = "1.34.89"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
dataclasses-json = "0.6.4"
frozenlist = "1.4.1"
google-api-core = "2.18.0"
google-api-python-client = "2.126.0"
google-auth = "2.29.0"
google-auth-httplib2 = "0.2.0"
googleapis-common-protos = "1.63.0"
grpcio = "1.62.2"
httplib2 = "0.22.0"
idna = "3.7"
jmespath = "1.0.1"
jsonpatch = "1.33"
jsonpointer = "2.4"
langchain = "0.1.16"
langchain-aws = "0.1.0"
langchain-community = "0.0.34"
langchain-core = "0.1.45"
langchain-google-community = "1.0.2"
langchain-text-splitters = "0.0.1"
langchainhub = "0.1.15"
langsmith = "0.1.48"
mako = "1.3.3"
markupsafe = "2.1.5"
marshmallow = "3.21.1"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
mysqlclient = "2.2.4"
numpy = "1.26.4"
orjson = "3.10.1"
packaging = "23.2"
proto-plus = "1.23.0"
protobuf = "4.25.3"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
requests = "2.31.0"
rsa = "4.9"
s3transfer = "0.10.1"
six = "1.16.0"
soupsieve = "2.5"
sqlalchemy = "2.0.29"
tenacity = "8.2.3"
types-requests = "2.31.0.20240406"
typing-inspect = "0.9.0"
typing-extensions = "4.11.0"
uritemplate = "4.1.1"
urllib3 = "2.2.1"
wikipedia = "1.4.0"
yarl = "1.9.4"
sqlmodel = "^0.0.18"
omymodels = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
